--- a/src/views/listingspp.ejs
+++ b/src/views/listingspp.ejs
@@ -2,7 +2,7 @@
 <main class="listings">
     <div class="section-header">
         <h3>Reviews (3)</h3>
-        <a href="#">See more</a>
+        <a href="/listings">See more</a>
     </div>
     <div class="reviews">
         <div class="reviews-grid">
@@ -24,7 +24,7 @@
       </div>
       <div class="section-header">
         <h3>My Listings (10)</h3>
-        <a href="#">See more</a>
+        <a href="/listings">See more</a>
       </div>
     <div class="scroll-container">
         <div class="item-grid">
@@ -43,7 +43,7 @@
 
     <div class="section-header">
     <h3>My drafts</h3>
-    <a href="#">See more</a>
+    <a href="/listings">See more</a>
     </div>
     <div class="scroll-container">
         <div class="item-grid">
