--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -5,10 +5,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 
     h2 {
-      font-size: 24px;
+      font-size: 20px;
       font-weight: bold;
       color: #333;
     }
