--- a/src/views/partials/hs.ejs
+++ b/src/views/partials/hs.ejs
@@ -1,7 +1,7 @@
 <main class="listings">
     <div class="section-header">
         <h2>Some Cats</h2>
-        <a href="#">See more</a>
+        <a href="/listings">See more</a>
     </div>
     <div class="scroll-container">
         <div class="item-grid">
