setting layout added

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,6 +23,7 @@ Table of Contents
 21. Carousel
 22. Checkout
 23. Listings
+24. Settings
 */
 
 /* 1. Variables =================== */
@@ -92,3 +93,6 @@ Table of Contents
 @import "components/checkout";
 /* 23. Listings =========== */
 @import "media/listings";
+
+/* 24. settings =========== */
+@import "layout/settings";
