--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -65,11 +65,11 @@
 
 
 <div class="profile-settings-card">
-  <a href="/orders" class="profile-setting-link">
+  <a href="#" class="profile-setting-link">
     <span>Orders</span>
     <i class="fa-solid fa-chevron-right"></i>
   </a>
-  <a href="/bookmarks" class="profile-setting-link">
+  <a href="#" class="profile-setting-link">
     <span>Bookmark</span>
     <i class="fa-solid fa-chevron-right"></i>
   </a>
