--- a/src/views/interests/interestsview.ejs
+++ b/src/views/interests/interestsview.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up - Interests</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -25,10 +26,7 @@
       <% }); %>
     </div>
 
-    <a href="/">
-    <button class="continue">Continue</button>
-    </a>
-
+    <a href="/" class="continue">Continue</a>
   </div>
 </body>
 </html>
