--- a/src/views/posting/posting_layout.ejs
+++ b/src/views/posting/posting_layout.ejs
@@ -37,7 +37,7 @@
 
 
       <main class="main-content-posting">
-        <%- include(`./partials/step${currentStep}`, { categories, api }) %>
+        <%- include(`./partials/step${currentStep}`, { categories, api, posting }) %>
 
       </main>
 
