--- a/src/sass/base/_elements.scss
+++ b/src/sass/base/_elements.scss
@@ -648,6 +648,15 @@
 
   }
 
+  input[type="checkbox"] {
+    width: 16px;
+    height: 16px;
+    transform: scale(1.2);
+    // margin-top: .2rem;
+    background-color: $color-gray;
+    cursor: pointer;
+  }
+
 
   .detailUrl {
     font-size: .7rem;
@@ -684,6 +693,16 @@
 
   .step1-form {
 
+    .checkbox-group {
+      input[type="checkbox"] {
+        margin-top: .9rem;
+      }
+
+      span {
+        margin-left: .6rem;
+      }
+    }
+
     .category-grid {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -718,6 +737,7 @@
       }
 
     }
+
 
   }
 
@@ -823,6 +843,17 @@
         margin-left: .7rem;
       }
     }
+
+
+    input[type="radio"] {
+      width: 20px;
+      /* Set the desired width */
+      height: 20px;
+      /* Set the desired height */
+      transform: scale(1.5);
+      /* Adjust the scale factor for size */
+      cursor: pointer;
+    }
   }
 
   .city-selector select {
@@ -860,6 +891,8 @@
 
     .subdescription {
       font-size: .8rem;
+      overflow-wrap: anywhere;
+
     }
 
     .condition {
@@ -896,20 +929,7 @@
 
       input {
         font-size: 3rem;
-        border: 1rem solid $color-primary;
       }
-
-      // input[type="checkbox"] {
-      //   width: 16px;
-      //   height: 16px;
-      //   transform: scale(1.5);
-      //   appearance: none;
-      //   -webkit-appearance: none;
-      //   border: 2px solid $color-primary;
-      //   border-radius: 3px;
-      //   margin-top: .2rem;
-      //   cursor: pointer;
-      // }
 
       .term-check {
         color: $color-text;
@@ -919,6 +939,54 @@
 
 
     }
-
   }
+
+  .confirmation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: $color-white;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+  }
+
+  .confirmation-box {
+    background-color: $color-white;
+    padding: 20px 5px;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 300px;
+
+    h2 {
+      font-size: 1.1rem;
+      margin-bottom: 1.5rem;
+    }
+
+    i {
+      color: $color-green;
+      font-size: 5rem;
+      margin-bottom: 1.5rem;
+    }
+
+    p {
+      font-size: 1rem;
+      margin-bottom: 1.5rem;
+    }
+
+    .back-btn {
+      width: 80%;
+      background-color: $color-primary;
+      color: $color-white;
+      padding: .3rem;
+      border-radius: 7px;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+  }
+
 }
