--- a/src/views/posting/partials/step1.ejs
+++ b/src/views/posting/partials/step1.ejs
@@ -3,8 +3,8 @@
   <p class="subdescription">Make a selection: One or both option are available</p>
 
   <div class="checkbox-group">
-    <label><input type="checkbox" name="type" value="RENT"> For Renting</label>
-    <label><input type="checkbox" name="type" value="PURCHASE"> For Sale</label>
+    <label><input type="checkbox" name="type" value="RENT"><span>For Renting</span></label>
+    <label><input type="checkbox" name="type" value="PURCHASE"><span>For Sale</span></label>
   </div>
 
   <p class="subtitle">Select a Category</p>
