--- a/src/sass/layout/_messages.scss
+++ b/src/sass/layout/_messages.scss
@@ -1,5 +1,6 @@
 .messages-page {
-    width: 430px;
+    max-width: 430px;
+    width: 100%;
     margin: 0 auto;
     overflow: hidden;
     background-color: white;
