--- a/src/sass/media/_listings.scss
+++ b/src/sass/media/_listings.scss
@@ -12,6 +12,7 @@
     background: #556C40;
     color: white;
     border-bottom: 1px solid #eee;
+    position: sticky;
 
     .header-btn {
       background: none;
