--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -26,7 +26,7 @@
 
       .page-title {
         font-family: $font-body;
-        font-size: 2rem;
+        font-size: 48px;
         font-weight: bold;
         margin-top: 0.2rem;
       }
@@ -35,8 +35,8 @@
     .header-icons {
       display: flex;
       align-items: center;
-      gap: 2rem;
-      margin-top: 0.5rem;
+      gap: 1.8rem;
+      margin-top: 1rem;
       margin-right: 1rem;
 
       .icon {
@@ -51,13 +51,13 @@
 
   .search-bar {
     margin-top: 1rem;
-    padding: 0 1rem;
+    padding: 0 0.5rem 1.3rem;
 
     input {
       width: 100%;
-      padding: 0.75rem 1rem;
+      padding: 0.75rem 0.8rem;
       border: none;
-      border-radius: 10px;
+      border-radius: 16px;
       font-size: 1rem;
       font-family: $font-body;
       background-color: $color-white;
