--- a/src/views/listings/index.ejs
+++ b/src/views/listings/index.ejs
@@ -25,15 +25,15 @@
       <h2>Categories</h2>
       <div class="category-image">
         <div>
-          <a href="/"><img src="https://picsum.photos/300/300" alt="Electronics & Gadgets" /></a>
+          <a href="/"><img src="/images/gadgets.jpg" alt="Electronics & Gadgets" /></a>
           <p>Electronics & Gadgets</p>
         </div>
         <div>
-          <a href="/"><img src="https://picsum.photos/300/300" alt="Fashion & Apparel" /></a>
+          <a href="/"><img src="/images/apearl.jpg" alt="Fashion & Apparel" /></a>
           <p>Fashion & Apparel</p>
         </div>
         <div>
-          <a href="/"><img src="https://picsum.photos/300/300" alt="Home & Furniture" /></a>
+          <a href="/"><img src="/images/furniture.webp" alt="Home & Furniture" /></a>
           <p>Home & Furniture</p>
         </div>
         <div>
