MBA-80 listing database added

--- a/src/views/home_category.ejs
+++ b/src/views/home_category.ejs
@@ -18,19 +18,19 @@
     </div>
     <div class="category-image">
       <div>
-        <a href="/"><img src="https://picsum.photos/300/300" alt="Electronics & Gadgets"></a>
+        <a href="/"><img src="/images/electronic.png" alt="Electronics & Gadgets"></a>
         <p>Electronics & Gadgets</p>
       </div>
       <div>
-        <a href="/"><img src="https://picsum.photos/300/300" alt="Fashion & Apparel"></a>
+        <a href="/"><img src="/images/fashion.png" alt="Fashion & Apparel"></a>
         <p>Fashion & Apparel</p>
       </div>
       <div>
-        <a href="/"><img src="https://picsum.photos/300/300" alt="Home & Furniture"></a>
+        <a href="/"><img src="/images/home.png" alt="Home &      Furniture"></a>
         <p>Home & Furniture</p>
       </div>
       <div>
-        <a href="/"><img src="https://picsum.photos/300/300" alt="Beauty & Personal Care"></a>
+        <a href="/"><img src="/images/beauty.png" alt="Beauty & Personal Care"></a>
         <p>Beauty & Personal Care</p>
       </div>
 
