--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -101,3 +101,6 @@ Table of Contents
 
 /* 25. Checkout Payment =========== */
 @import "components/paymentcheck";
+
+/* 26. Payment =========== */
+@import "components/purchase";
