--- a/src/sass/base/_elements.scss
+++ b/src/sass/base/_elements.scss
@@ -53,7 +53,8 @@
       line-height: 1.2;
     }
   }
-  #content{
+
+  #content {
     padding: 10px;
   }
 
@@ -746,6 +747,45 @@
   }
 
   .step2-form {
+
+    .photo-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 10px;
+    }
+
+    .photo-slot {
+      width: 100px;
+      height: 100px;
+      position: relative;
+      overflow: hidden;
+      border: 1px solid $color-primary;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+
+    .photo-slot img {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: cover;
+    }
+
+
+    .remove-btn {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      background: rgba(0, 0, 0, 0.7);
+      color: $color-white;
+      border: none;
+      padding: 2px 5px;
+      cursor: pointer;
+      font-size: 12px;
+    }
+
     .form-group {
       margin-bottom: 1rem;
       display: flex;
@@ -757,30 +797,6 @@
       text-align: left;
       margin-bottom: 1rem;
 
-    }
-
-    .photo-grid {
-      display: flex;
-      gap: 0.5rem;
-      flex-wrap: wrap;
-    }
-
-    .photo-slot {
-      width: 100px;
-      height: 100px;
-      background-color: $color-gray;
-      border: 1px solid $color-primary;
-      border-radius: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .photo-slot img {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: cover;
-      border-radius: 10px;
     }
 
     input[type="text"],
@@ -870,6 +886,7 @@
   }
 
   .step4-form {
+
     .preview-card {
       border: 1px solid $color-primary;
       border-radius: 5px;
@@ -878,6 +895,7 @@
 
     .preview-img img {
       max-height: 250px;
+
     }
 
     h3 {
@@ -940,9 +958,9 @@
         font-size: .75rem;
         margin-left: 1rem;
       }
-
-
     }
+
+
   }
 
   .confirmation {
@@ -991,6 +1009,52 @@
       font-size: 1rem;
       cursor: pointer;
     }
+  }
+
+  .carousel {
+    position: relative;
+    width: 600px;
+    max-width: 100%;
+    max-height: 300px;
+    overflow: hidden;
+  }
+
+  .carousel-images {
+    display: flex;
+    width: 100%;
+  }
+
+  .carousel-slide {
+    display: none;
+    width: 100%;
+    transition: opacity 0.5s ease-in-out;
+  }
+
+  .carousel-slide img {
+    width: 100%;
+    height: 250px;
+    display: block;
+  }
+
+  .carousel-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: $color-gray;
+    color: $color-text;
+    border: none;
+    font-size: 15px;
+    padding: 8px 12px;
+    cursor: pointer;
+    border-radius: 50%;
+  }
+
+  .carousel-btn.prev {
+    left: 10px;
+  }
+
+  .carousel-btn.next {
+    right: 10px;
   }
 
 }
